--- a/package.json
+++ b/package.json
@@ -4,17 +4,14 @@
   "version": "1.0.0",
   "description": "The latest news on Marc‘s arm – live from the Web!",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:Dreamseer/arm-status.git"
-  },
+  "repository": "github:mrcgrtz/arm-status",
   "author": {
     "name": "Marc Görtz",
     "email": "git@marcgoertz.de",
     "url": "https://marcgoertz.de/"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "scripts": {
     "build": "npx eleventy",
