--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,18 +1,17 @@
 version: 2
 updates:
-
   # Maintain dependencies for Node
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: 'npm'
+    directory: '/'
     schedule:
-      interval: "monthly"
+      interval: 'monthly'
     assignees:
-      - "mrcgrtz"
+      - 'mrcgrtz'
 
   # Check for updates to GitHub Actions
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: 'github-actions'
+    directory: '/'
     schedule:
-      interval: "monthly"
+      interval: 'monthly'
     assignees:
-      - "mrcgrtz"
+      - 'mrcgrtz'
