--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "build": "npx eleventy",
+    "format": "prettier --write .",
     "prepare": "husky install",
     "start": "npx eleventy --serve",
     "test": "xo && stylelint **/*.css"
@@ -24,6 +25,7 @@
     "clean-css": "^5.3.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
+    "prettier": "^2.8.7",
     "stylelint": "^15.4.0",
     "stylelint-config-standard": "^32.0.0",
     "xo": "^0.53.1"
